--- a/desafioUpMedal/styles/css/vtex.store-header.css
+++ b/desafioUpMedal/styles/css/vtex.store-header.css
@@ -1,3 +1,3 @@
-.container--headerlayoutgeneral{
-    background-color: #000000;
+.container--headerlayoutgeneral {
+  background-color: #232f3e;
 }
