--- a/desafioUpMedal/styles/css/vtex.rich-text.css
+++ b/desafioUpMedal/styles/css/vtex.rich-text.css
@@ -1,3 +1,15 @@
 .wrapper--textlead {
   color: #fff;
 }
+
+.container--textoSetor {
+  margin: 2rem;
+}
+
+.container--textoConfira {
+  margin-top: 2rem;
+}
+
+.container--imagesDesktopBottom {
+  margin: 2rem;
+}
