--- a/desafioUpMedal/styles/css/vtex.slider-layout.css
+++ b/desafioUpMedal/styles/css/vtex.slider-layout.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 1920) {
     .slideChildrenContainer {
-        margin-left: 30vw !important;
+        width: 100vw!important;
     }
 }
