Limpeza geral e avanço do estilo da Home.

--- a/desafioUpMedal/styles/css/vtex.store-components.css
+++ b/desafioUpMedal/styles/css/vtex.store-components.css
@@ -15,6 +15,15 @@
   margin-bottom: 1rem;
 }
 
+.infoCardHeadline--info-card-example,
+.infoCardSubhead--info-card-example {
+  color: #fff;
+}
+
+.infoCardCallActionText--info-card-example {
+  color: #527fff;
+}
+
 .searchBarInnerContainer--searchheaderdesktop {
   width: 700px;
 }
