Atualizado cores header

--- a/desafioUpMedal/styles/css/vtex.menu.css
+++ b/desafioUpMedal/styles/css/vtex.menu.css
@@ -1,7 +1,11 @@
-.submenuWrapper{
-    background-color: #232f3e;
-  }
+.submenuWrapper {
+  background-color: #232f3e;
+}
 
-  .styledLink:hover{
-      color: orange;
-  }
+.styledLinkContent {
+  color: #fff;
+}
+
+.styledLinkContent:hover {
+  color: #f07114;
+}
