--- a/desafioUpMedal/styles/css/vtex.store-link.css
+++ b/desafioUpMedal/styles/css/vtex.store-link.css
@@ -5,8 +5,11 @@
   border-radius: 3mm;
   max-width: fit-content;
   font-size: 0.9rem;
-  margin-left: 10%;
   margin-bottom: 10%;
+}
+
+.buttonLink:hover {
+  color: #f07114;
 }
 .label {
   padding: 2mm;
