--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -22,6 +22,15 @@
   margin-top: 3rem;
 }
 
+.flexRow--rodape1 {
+  background-color: #232f3e;
+  padding-left: 20vw;
+}
+
+.flexRow--rodape2 {
+  padding-left: 20vw;
+}
+
 @media screen and (min-width: 1920px) {
   .flexRow--imagesDesktop1 {
     padding-left: 10vw;
