Limpeza de código da Home e comentários gerais.

--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -38,6 +38,8 @@
   color: white!important;
 }
 
+/* Espaçamento do componente flex row em telas 1920x1080 */
+
 @media screen and (min-width: 1920px) {
   .flexRow--imagesDesktop1 {
     padding-left: 10vw;
