--- a/desafioUpMedal/styles/css/vtex.rich-text.css
+++ b/desafioUpMedal/styles/css/vtex.rich-text.css
@@ -2,6 +2,8 @@
   color: #fff;
 }
 
+/* Cores dos textos "Setor" e "Confira"  */
+
 .container--textoSetor {
   margin: 2rem;
   color: #000!important;
@@ -11,6 +13,8 @@
   margin-top: 2rem;
   color: #000;
 }
+
+/* Espaçamento e cor do último container com fotos */
 
 .container--imagesDesktopBottom {
   margin: 2rem;
