header menus e mobile prontos

--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -1,4 +1,5 @@
 .flexRowContent--flexrowcontentheader,
+.flexRowContent--category-menu,
 .flexRowContent--flexrowcontentheadermobile,
 .flexRowContent--flexrowcontentfooter {
   background-color: #232f3e;
