--- a/desafioUpMedal/styles/css/vtex.store-link.css
+++ b/desafioUpMedal/styles/css/vtex.store-link.css
@@ -19,3 +19,12 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+
+@media screen and (max-width: 768px){
+  .link {
+    max-width: fit-content;
+    margin-left: 1rem;
+  }
+  
+}
