Começo da página sobre.

--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -23,6 +23,8 @@
   margin-top: 3rem;
 }
 
+/* Cor e espaçamento dos rodapés desktop e móvel */
+
 .flexRow--rodapeDesk1 {
   background-color: #232f3e;
   padding-left: 16vw;
