--- a/desafioUpMedal/styles/css/vtex.minicart.css
+++ b/desafioUpMedal/styles/css/vtex.minicart.css
@@ -1,3 +1,4 @@
+/* Ajustanto configurações do minicart */
 .minicartContainer--minicartheadermobile{
     width: 38px;
     height: 34px;
@@ -5,6 +6,7 @@
     align-items: center;
     
 }
+/* Mudando acor do ícone do minicart */
 .cartIcon{
   color: #fff;
   
