Resolvidos - bottom do rodapé, parcialmente logo mobile,...já comentados

--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -29,7 +29,7 @@
 .flexRow--rodapeDesk1 {
   background-color: #232f3e;
   padding-left: 16vw;
-  margin-top: 2rem;
+  /*margin-top: 2rem;*/
 }
 
 .flexRow--rodapeDesk2 {
