--- a/desafioUpMedal/styles/css/vtex.rich-text.css
+++ b/desafioUpMedal/styles/css/vtex.rich-text.css
@@ -1,8 +1,9 @@
+/* Mudando cor dos texto em lead */
 .wrapper--textlead {
   color: #fff;
 }
 
-/* Cores dos textos "Setor" e "Confira"  */
+/* Cores dos textos "Setor" e "Confira" */
 
 .container--textoSetor {
   margin: 2rem;
@@ -12,6 +13,20 @@
 .container--textoConfira {
   margin-top: 2rem;
   color: #000;
+}
+
+/* Mudando Cores e Tamanhos dos textos da fileira vantagens */
+.container--title-vantagens{
+  background-color: #232f3e;
+  color: #fff;
+  border:none;
+}
+
+.container--vantagens{
+  border: none;
+  color: #fff;
+  padding: 0 .5rem;
+  padding-bottom: 1rem;
 }
 
 /* Espaçamento e cor do último container com fotos */
