--- a/desafioUpMedal/styles/css/vtex.store-components.css
+++ b/desafioUpMedal/styles/css/vtex.store-components.css
@@ -38,6 +38,17 @@
   .infoCardContainer {
     height: 50vh;
   }
+
+  .infoCardContainer--info-card-aws-topo{
+    width: 44vw!important;
+  }
+
+  .infoCardContainer--info-card-aws-final{
+    width: 100%;
+    height: 60vh;
+    padding-top: 12rem!important;
+    padding-bottom: 3rem!important;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -59,6 +70,10 @@
   .infoCardSubhead--info-card-example {
     padding: 1rem;
     margin-top: 0.5rem;
+  }
+
+  .infoCardTextContainer--info-card-aws-topo{
+    width: 100%!important;
   }
 }
 
@@ -103,6 +118,23 @@
 @media screen and (min-width: 768px) {
   .infoCardCallActionContainer :global(.vtex-button) {
     margin: 1.5rem;
+  }
+
+  .infoCardTextContainer--info-card-aws-topo{
+    height: fit-content;
+    width: 42vw!important;
+    padding-top: 3rem;
+    margin:0 1.75rem  ;
+  }
+
+  .infoCardTextContainer--info-card-aws-final{
+    width: 52vw!important;
+    height: 80vh;
+  }
+
+  .infoCardCallActionContainer--info-card-aws-final{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -162,13 +194,17 @@
 }
 .infoCardContainer--info-card-aws-topo,
 .infoCardContainer--info-card-aws-final{
-  padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
   background-color: #1e2832;
-  border-color: #232f3e;
+}
+
+.infoCardTextContainer--info-card-aws-topo{
+  width: 60%;
 }
 
 /* Tirando borda do infocard sobre aws */
+.infoCardContainer--info-card-aws-topo,
 .infoCardContainer--info-card-aws-final{
-  border-top-color: #232f3e;
+  border: none;
 }
