--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -26,6 +26,7 @@
 
 /* Configurando layout da fileira vantagens aws  */
 .flexRow--vantagens{
+  height: 50vh;
   border: none;
   background-color: #1e2832;
 }
@@ -69,6 +70,10 @@
   color: white !important;
 }
 
+.flexRowContent--rodapeMob1{
+  justify-content: space-around!important;
+}
+
 /* Espaçamento da coluna direita da página de produto */
 
 @media screen and (min-width: 768px) {
@@ -76,18 +81,16 @@
     margin-right: 1rem;
   }
 
+  /*
   .flexRow--sobre-aws{
     height: fit-content;
   }
+  */
 }
 
 @media screen and (max-width: 768px){
-  .flexRow--flexRow--sobre-aws{
-      padding: 1rem;
-  }
-
-  .flexRow--sobre-aws{
-    height: 70vh;
+   .flexRow--sobre-aws{
+    height: 55vh;
   }
 }
 
@@ -127,4 +130,20 @@
     padding-left: 10vw;
     margin-right: 10vw;
   }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px){
+  .flexRow--sobre-aws{
+    height: 45vh;
+  }
+}
+
+@media (min-width: 1200px){
+  .flexRow--sobre-aws{
+    height: 50vh;
+  }
+}
+
+@media (max-width: 575.98px){
+  
 }
