--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -25,7 +25,7 @@
 }
 
 /* Configurando layout da fileira vantagens aws  */
-.flexRow--vantagens{
+.flexRow--vantagens {
   height: 50vh;
   border: none;
   background-color: #1e2832;
@@ -39,17 +39,17 @@
   align-items: center;
 }
 
-.flexRow--sobre-aws{
+.flexRow--sobre-aws {
   align-items: space-around;
 }
 
-.flexRow--sobre-aws{
+.flexRow--sobre-aws {
   background-color: #1e2832;
-  padding:  2rem ;
+  padding: 2rem;
 }
 
-.flexCol--video-aws{
-  background-color: #1e2832!important;
+.flexCol--video-aws {
+  background-color: #1e2832 !important;
 }
 
 /* Cor e espaçamento dos rodapés desktop e móvel */
@@ -70,8 +70,8 @@
   color: white !important;
 }
 
-.flexRowContent--rodapeMob1{
-  justify-content: space-around!important;
+.flexRowContent--rodapeMob1 {
+  justify-content: space-around !important;
 }
 
 /* Espaçamento da coluna direita da página de produto */
@@ -81,15 +81,13 @@
     margin-right: 1rem;
   }
 
-  /*
-  .flexRow--sobre-aws{
-    height: fit-content;
-  }
-  */
+  /* .flexRow--sobre-aws {
+    height: 60vh;
+  } */
 }
 
-@media screen and (max-width: 768px){
-   .flexRow--sobre-aws{
+@media screen and (max-width: 768px) {
+  .flexRow--sobre-aws {
     height: 55vh;
   }
 }
@@ -132,18 +130,17 @@
   }
 }
 
-@media (min-width: 992px) and (max-width: 1199.98px){
-  .flexRow--sobre-aws{
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .flexRow--sobre-aws {
     height: 45vh;
   }
 }
 
-@media (min-width: 1200px){
-  .flexRow--sobre-aws{
+@media (min-width: 1200px) {
+  .flexRow--sobre-aws {
     height: 50vh;
   }
 }
 
-@media (max-width: 575.98px){
-  
+@media (max-width: 575.98px) {
 }
