Fix Sobre css componentes

--- a/desafioUpMedal/styles/css/vtex.slider-layout.css
+++ b/desafioUpMedal/styles/css/vtex.slider-layout.css
@@ -4,6 +4,7 @@
 }
 /* Inserindo espaçamento no container do slider parceiros*/
 .sliderLayoutContainer--imagensBannerParceiros{
+    height: 25vh;
     padding: 3rem 0;
     background-color: #1e2832;
 }
