--- a/desafioUpMedal/styles/css/vtex.flex-layout.css
+++ b/desafioUpMedal/styles/css/vtex.flex-layout.css
@@ -26,7 +26,7 @@
 
 /* Configurando layout da fileira vantagens aws  */
 .flexRow--vantagens {
-  height: 50vh;
+  height: 70vh;
   border: none;
   background-color: #1e2832;
 }
@@ -53,7 +53,6 @@
 }
 
 /* Cor e espaçamento dos rodapés desktop e móvel */
-
 .flexRow--rodapeDesk1 {
   background-color: #232f3e;
   padding-left: 16vw;
@@ -74,30 +73,52 @@
   justify-content: space-around !important;
 }
 
-/* Espaçamento da coluna direita da página de produto */
+/* Espaçamento do componente flex em telas menores que 576px*/
+@media (max-width: 575.98px) {
+  .flexRowContent--sobre-aws{
+    height: 85vh;
+  }
 
+  .flexRow--vantagens{
+    height: 100%!important;
+  }
+}
+
+/* Espaçamento do componente flex em telas de 768px e up */
+/* Espaçamento da coluna direita da página de produto */
 @media screen and (min-width: 768px) {
   .flexCol--colDireitaProduto {
     margin-right: 1rem;
   }
-
-  /* .flexRow--sobre-aws {
-    height: 60vh;
-  } */
 }
-
+/* Espaçamento do componente flex em telas até 768px
 @media screen and (max-width: 768px) {
   .flexRow--sobre-aws {
     height: 55vh;
   }
+}*/
+
+/* Espaçamento do componente flex em telas a partir de 992px e menores de 1200px*/
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .flexRow--sobre-aws {
+    height: 45vh;
+  }
 }
 
+/* Espaçamento do componente flex em telas 1200px e up*/
+@media (min-width: 1200px) {
+  .flexRow--sobre-aws {
+    height: 50vh;
+  }
+}
+/* Espaçamento do componente flex em telas até  1200*/
 @media screen and (max-width: 1200px) {
   .flexCol--colDireitaProduto {
     margin-right: 1rem;
   }
 }
 
+/* Espaçamento do componente flex em telas 1920x1080 e up*/
 @media screen and (min-width: 1920px) {
   .flexCol--colEsquerdaProduto {
     margin-left: 15vw;
@@ -109,11 +130,7 @@
     margin-right: 0;
     padding-left: 10rem;
   }
-}
 
-/* Espaçamento do componente flex row em telas 1920x1080 */
-
-@media screen and (min-width: 1920px) {
   .flexRow--imagesDesktop1 {
     padding-left: 10vw;
     margin-right: 10vw;
@@ -128,19 +145,4 @@
     padding-left: 10vw;
     margin-right: 10vw;
   }
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .flexRow--sobre-aws {
-    height: 45vh;
-  }
-}
-
-@media (min-width: 1200px) {
-  .flexRow--sobre-aws {
-    height: 50vh;
-  }
-}
-
-@media (max-width: 575.98px) {
 }
