--- a/desafioUpMedal/styles/css/vtex.store-components.css
+++ b/desafioUpMedal/styles/css/vtex.store-components.css
@@ -1,5 +1,10 @@
 
 @media (max-width: 575.98px){
+
+  .infoCardContainer--info-card-example{
+    height: 96%;
+  }
+
   .infoCardContainer--info-card-aws-topo {
     width: 100%;
   }
